Correct CSS Grid setup, and font spacing and style setup.

--- a/style.sass
+++ b/style.sass
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded:600|Nanum+Gothic|Roboto:300,400')
+
 $bgcolor: #39373c
+$mainfont: 'Encode Sans Semi Expanded', sans-serif
+$secondfont: 'Roboto', sans-serif
 
 .wrapper
     background-image: url("img/dogheader.jpg")
@@ -9,4 +13,45 @@ $bgcolor: #39373c
     background-position: center
     overflow: hidden
     background-repeat: no-repeat
-    
+
+.content-1
+    display: grid
+    grid-template-rows: repeat(18, 1fr)
+    grid-template-columns: repeat(18, 1fr)
+    max-width: 100vw
+    max-height: 100vh
+    min-height: 0
+    min-width: 0
+
+.header-1    
+    grid-column: 4/8
+    grid-row: 5/11
+    background-color: transparent
+    margin: auto
+    overflow: hidden
+    min-width: 0
+
+.body-1
+    grid-column: 4/8
+    grid-row: 11/15
+    background-color: transparent
+    margin: auto
+    overflow: hidden
+    min-width: 0
+
+
+h1 
+    font-family: $mainfont
+    font-size: 2.8vw
+    color: #ffffff
+    font-weight: 600
+    line-height: 7.5vh
+
+p 
+    font-family: $secondfont
+    font-size: 1.1vw
+    color: #ffffff
+    font-weight: 300
+    line-height: 3.2vh
+
+
